# proyecto1-analisis

./: CMakeLists.txt  README.md  def.h  main.cpp
algorithms/: DeflateMethod.hpp  LaguerreMethod.hpp  MullerMethod.h  MullerMethod.hpp  def.cpp  def.h  deflate.h  deflate.hpp  prueba.h  rootMuller.h  rootMuller.hpp
